fix header on mobile

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2133,6 +2133,12 @@ body.prevent-scrolling {
       -webkit-transform: translate3d(0, 0, 0);
       transform: translate3d(0, 0, 0); } }
 
+@media only screen and (max-width: 749px) {
+  .page-container {
+    padding-top: 95px;
+  }
+}
+
 hr {
   margin: 55px 0;
   border: 0;
